AvalancheBulletinRepository and AvalancheReportRepository