@@ -17,8 +17,8 @@ import java.util.stream.Collectors;
 import eu.albina.rest.websocket.AvalancheBulletinEndpoint;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+import jakarta.transaction.Transactional;
 import org.hibernate.Hibernate;
-import org.hibernate.HibernateException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -30,9 +30,6 @@ import eu.albina.model.Region;
 import eu.albina.model.ServerInstance;
 import eu.albina.model.User;
 import eu.albina.model.enumerations.DangerRating;
-import eu.albina.util.AlbinaUtil;
-import eu.albina.util.HibernateUtil;
-import jakarta.persistence.EntityManager;
 
 /**
  * Controller for avalanche bulletins.
@@ -48,6 +45,9 @@ public class AvalancheBulletinController {
 	private final List<BulletinLock> bulletinLocks = new ArrayList<>();
 
 	@Inject
+	AvalancheBulletinRepository avalancheBulletinRepository;
+
+	@Inject
 	AvalancheReportController avalancheReportController;
 
 	@Inject
@@ -59,28 +59,22 @@ public class AvalancheBulletinController {
 	/**
 	 * Retrieve an avalanche bulletin from the database by {@code bulletinID}.
 	 *
-	 * @param bulletinId
-	 *            The ID of the desired avalanche bulletin.
+	 * @param bulletinId The ID of the desired avalanche bulletin.
 	 * @return The avalanche bulletin with the given ID.
 	 */
 	public AvalancheBulletin getBulletin(String bulletinId) {
-		return HibernateUtil.getInstance().run(entityManager -> {
-			AvalancheBulletin bulletin = entityManager.find(AvalancheBulletin.class, bulletinId);
-			if (bulletin == null) {
-				throw new HibernateException("No bulletin with ID: " + bulletinId);
-			}
-			initializeBulletin(bulletin);
-			return bulletin;
-		});
+		AvalancheBulletin bulletin = avalancheBulletinRepository.findById(bulletinId).orElseThrow();
+		initializeBulletin(bulletin);
+		return bulletin;
 	}
 
 	/**
 	 * Initialize all fields of the {@code bulletin} to be able to access it after
 	 * the DB transaction was closed.
 	 *
-	 * @param bulletin
-	 *            the bulletin that should be initialized
+	 * @param bulletin the bulletin that should be initialized
 	 */
+	@Deprecated
 	private void initializeBulletin(AvalancheBulletin bulletin) {
 		Hibernate.initialize(bulletin.getAvActivityComment());
 		Hibernate.initialize(bulletin.getAvActivityHighlights());
@@ -114,80 +108,71 @@ public class AvalancheBulletinController {
 	 * checked if they belong to the users {@code region} and if they are already in
 	 * the database. Depending on this the handling is different.
 	 *
-	 * @param newBulletins
-	 *            the bulletins to be saved
-	 * @param startDate
-	 *            the start date the bulletins are valid from
-	 * @param endDate
-	 *            the end date the bulletins are valid until
-	 * @param region
-	 *            the active region of the user who is saving the bulletins
-	 * @param publicationDate
-	 *            the publication date of the bulletins
+	 * @param newBulletins    the bulletins to be saved
+	 * @param startDate       the start date the bulletins are valid from
+	 * @param endDate         the end date the bulletins are valid until
+	 * @param region          the active region of the user who is saving the bulletins
 	 * @return a map of all affected bulletin ids and bulletins
-	 * @throws AlbinaException
-	 *             if a micro region is defined twice in the bulletins
+	 * @throws AlbinaException if a micro region is defined twice in the bulletins
 	 */
+	@Transactional
 	public synchronized Map<String, AvalancheBulletin> saveBulletins(List<AvalancheBulletin> newBulletins, Instant startDate,
-			Instant endDate, Region region, User user) throws AlbinaException {
+																	 Instant endDate, Region region, User user) throws AlbinaException {
 		Map<String, AvalancheBulletin> resultBulletins = new HashMap<String, AvalancheBulletin>();
 
 		if (checkBulletinsForDuplicateRegion(newBulletins, region))
 			throw new AlbinaException("duplicateRegion");
 
-		return HibernateUtil.getInstance().runTransaction(entityManager -> {
-			List<AvalancheBulletin> loadedBulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-					.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
-			Map<String, AvalancheBulletin> originalBulletins = loadedBulletins.stream().collect(Collectors.toMap(AbstractPersistentObject::getId, b -> b));
+		List<AvalancheBulletin> loadedBulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
+		Map<String, AvalancheBulletin> originalBulletins = loadedBulletins.stream().collect(Collectors.toMap(AbstractPersistentObject::getId, b -> b));
 
-			List<String> ids = new ArrayList<String>();
-			for (AvalancheBulletin newBulletin : newBulletins) {
-				ids.add(newBulletin.getId());
-				AvalancheBulletin originalBulletin = originalBulletins.get(newBulletin.getId());
-				if (originalBulletin != null) {
-					// Bulletin already exists
-					if (isOwnBulletin(originalBulletin, region)) {
-						modifyOwnBulletin(region, newBulletin, originalBulletin);
-					} else {
-						modifyForeignBulletin(region, newBulletin, originalBulletin);
-					}
-					entityManager.merge(originalBulletin);
-					resultBulletins.put(originalBulletin.getId(), originalBulletin);
-				} else if (isOwnBulletin(newBulletin, region)) {
-					// own bulletin
-					// Bulletin has to be created
-					newBulletin.setId(null);
-					entityManager.persist(newBulletin);
-					resultBulletins.put(newBulletin.getId(), newBulletin);
+		List<String> ids = new ArrayList<String>();
+		for (AvalancheBulletin newBulletin : newBulletins) {
+			ids.add(newBulletin.getId());
+			AvalancheBulletin originalBulletin = originalBulletins.get(newBulletin.getId());
+			if (originalBulletin != null) {
+				// Bulletin already exists
+				if (isOwnBulletin(originalBulletin, region)) {
+					modifyOwnBulletin(region, newBulletin, originalBulletin);
 				} else {
-					// foreign bulletin
-					// do not create the bulletin (it was removed by another user)
+					modifyForeignBulletin(region, newBulletin, originalBulletin);
 				}
-				logger.info("Bulletin {} for region {} updated by {}", newBulletin.getId(), region.getId(), user);
+				avalancheBulletinRepository.save(originalBulletin);
+				resultBulletins.put(originalBulletin.getId(), originalBulletin);
+			} else if (isOwnBulletin(newBulletin, region)) {
+				// own bulletin
+				// Bulletin has to be created
+				newBulletin.setId(null);
+				avalancheBulletinRepository.save(newBulletin);
+				resultBulletins.put(newBulletin.getId(), newBulletin);
+			} else {
+				// foreign bulletin
+				// do not create the bulletin (it was removed by another user)
 			}
+			logger.info("Bulletin {} for region {} updated by {}", newBulletin.getId(), region.getId(), user);
+		}
 
-			// Delete obsolete bulletins
-			for (AvalancheBulletin avalancheBulletin : originalBulletins.values()) {
+		// Delete obsolete bulletins
+		for (AvalancheBulletin avalancheBulletin : originalBulletins.values()) {
 
-				// bulletin has to be removed
-				if (avalancheBulletin.affectsRegion(region) && !ids.contains(avalancheBulletin.getId())
-						&& isOwnBulletin(avalancheBulletin, region)) {
-					entityManager.remove(avalancheBulletin);
-					resultBulletins.remove(avalancheBulletin.getId());
-				}
+			// bulletin has to be removed
+			if (avalancheBulletin.affectsRegion(region) && !ids.contains(avalancheBulletin.getId())
+				&& isOwnBulletin(avalancheBulletin, region)) {
+				avalancheBulletinRepository.delete(avalancheBulletin);
+				resultBulletins.remove(avalancheBulletin.getId());
 			}
+		}
 
-			for (AvalancheBulletin bulletin : resultBulletins.values())
-				initializeBulletin(bulletin);
+		for (AvalancheBulletin bulletin : resultBulletins.values())
+			initializeBulletin(bulletin);
 
-			avalancheReportController.saveReport(resultBulletins, startDate, region, user, entityManager);
-			// save report for super regions
-			for (Region superRegion : region.getSuperRegions()) {
-				avalancheReportController.saveReport(resultBulletins, startDate, superRegion, user, entityManager);
-			}
+		avalancheReportController.saveReport(resultBulletins, startDate, region, user);
+		// save report for super regions
+		for (Region superRegion : region.getSuperRegions()) {
+			avalancheReportController.saveReport(resultBulletins, startDate, superRegion, user);
+		}
 
-			return resultBulletins;
-		});
+		return resultBulletins;
 	}
 
 	private static boolean isOwnBulletin(AvalancheBulletin newBulletin, Region region) {
@@ -291,158 +276,145 @@ public class AvalancheBulletinController {
 	/**
 	 * Creates a {@code bulletin} in the database.
 	 *
-	 * @param startDate
-	 *            the start date the bulletin is valid from
-	 * @param endDate
-	 *            the end date the bulletin is valid until
-	 * @param region
-	 *            the active region of the user who is creating the bulletin
+	 * @param startDate the start date the bulletin is valid from
+	 * @param endDate   the end date the bulletin is valid until
+	 * @param region    the active region of the user who is creating the bulletin
 	 * @return a map of all bulletin ids and bulletins for this day
 	 */
 	public synchronized Map<String, AvalancheBulletin> createBulletin(AvalancheBulletin newBulletin, Instant startDate, Instant endDate,
-			Region region, EntityManager entityManager) {
+																	  Region region) {
 		Map<String, AvalancheBulletin> resultBulletins = new HashMap<String, AvalancheBulletin>();
 
-			List<AvalancheBulletin> loadedBulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-					.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
+		List<AvalancheBulletin> loadedBulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
 
-			for (AvalancheBulletin loadedBulletin : loadedBulletins) {
-				// check micro-regions for each bulletin to prevent duplicates
-				for (String microRegion : newBulletin.getPublishedAndSavedRegions()) {
-					loadedBulletin.getPublishedRegions().remove(microRegion);
-					loadedBulletin.getSavedRegions().remove(microRegion);
-				}
-				if (!loadedBulletin.getPublishedAndSavedRegions().isEmpty()) {
-					entityManager.merge(loadedBulletin);
-					resultBulletins.put(loadedBulletin.getId(), loadedBulletin);
-				} else {
-					entityManager.remove(loadedBulletin);
-				}
+		for (AvalancheBulletin loadedBulletin : loadedBulletins) {
+			// check micro-regions for each bulletin to prevent duplicates
+			for (String microRegion : newBulletin.getPublishedAndSavedRegions()) {
+				loadedBulletin.getPublishedRegions().remove(microRegion);
+				loadedBulletin.getSavedRegions().remove(microRegion);
 			}
+			if (!loadedBulletin.getPublishedAndSavedRegions().isEmpty()) {
+				avalancheBulletinRepository.save(loadedBulletin);
+				resultBulletins.put(loadedBulletin.getId(), loadedBulletin);
+			} else {
+				avalancheBulletinRepository.delete(loadedBulletin);
+			}
+		}
 
-			// Bulletin has to be created
-			newBulletin.setId(null);
-			entityManager.persist(newBulletin);
-			resultBulletins.put(newBulletin.getId(), newBulletin);
+		// Bulletin has to be created
+		newBulletin.setId(null);
+		avalancheBulletinRepository.save(newBulletin);
+		resultBulletins.put(newBulletin.getId(), newBulletin);
 
-			for (AvalancheBulletin bulletin : resultBulletins.values())
-				initializeBulletin(bulletin);
+		for (AvalancheBulletin bulletin : resultBulletins.values())
+			initializeBulletin(bulletin);
 
-			return resultBulletins;
+		return resultBulletins;
 	}
 
 	/**
 	 * Update a {@code bulletin} in the database.
 	 *
-	 * @param startDate
-	 *            the start date the bulletin is valid from
-	 * @param endDate
-	 *            the end date the bulletin is valid until
-	 * @param region
-	 *            the active region of the user who is updating the bulletin
+	 * @param startDate the start date the bulletin is valid from
+	 * @param endDate   the end date the bulletin is valid until
+	 * @param region    the active region of the user who is updating the bulletin
 	 * @return a map of all bulletin ids and bulletins for this day
 	 */
-	public Map<String, AvalancheBulletin> updateBulletin(AvalancheBulletin updatedBulletin, Instant startDate, Instant endDate, Region region, User user, EntityManager entityManager) {
+	@Transactional
+	public Map<String, AvalancheBulletin> updateBulletin(AvalancheBulletin updatedBulletin, Instant startDate, Instant endDate, Region region, User user) {
 		Map<String, AvalancheBulletin> resultBulletins = new HashMap<String, AvalancheBulletin>();
 
-			List<AvalancheBulletin> loadedBulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-					.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
+		List<AvalancheBulletin> loadedBulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
 
-			for (AvalancheBulletin loadedBulletin : loadedBulletins) {
-				if (!loadedBulletin.getId().equals(updatedBulletin.getId())) {
-					// check micro-regions for each bulletin to prevent duplicates
-					// and add general headline from currently updated bulletin
-					for (String microRegion : updatedBulletin.getPublishedAndSavedRegions()) {
-						loadedBulletin.getPublishedRegions().remove(microRegion);
-						loadedBulletin.getSavedRegions().remove(microRegion);
+		for (AvalancheBulletin loadedBulletin : loadedBulletins) {
+			if (!loadedBulletin.getId().equals(updatedBulletin.getId())) {
+				// check micro-regions for each bulletin to prevent duplicates
+				// and add general headline from currently updated bulletin
+				for (String microRegion : updatedBulletin.getPublishedAndSavedRegions()) {
+					loadedBulletin.getPublishedRegions().remove(microRegion);
+					loadedBulletin.getSavedRegions().remove(microRegion);
 
-						if (loadedBulletin.getOwnerRegion().equals(updatedBulletin.getOwnerRegion()) && region.isEnableGeneralHeadline()) {
-							loadedBulletin.setGeneralHeadlineComment(updatedBulletin.getGeneralHeadlineComment());
-							loadedBulletin.setGeneralHeadlineCommentTextcat(updatedBulletin.getGeneralHeadlineCommentTextcat());
-							loadedBulletin.setGeneralHeadlineCommentNotes(updatedBulletin.getGeneralHeadlineCommentNotes());
-						}
-					}
-					if (!loadedBulletin.getPublishedAndSavedRegions().isEmpty()) {
-						entityManager.merge(loadedBulletin);
-						resultBulletins.put(loadedBulletin.getId(), loadedBulletin);
-					} else {
-						entityManager.remove(loadedBulletin);
+					if (loadedBulletin.getOwnerRegion().equals(updatedBulletin.getOwnerRegion()) && region.isEnableGeneralHeadline()) {
+						loadedBulletin.setGeneralHeadlineComment(updatedBulletin.getGeneralHeadlineComment());
+						loadedBulletin.setGeneralHeadlineCommentTextcat(updatedBulletin.getGeneralHeadlineCommentTextcat());
+						loadedBulletin.setGeneralHeadlineCommentNotes(updatedBulletin.getGeneralHeadlineCommentNotes());
 					}
 				}
+				if (!loadedBulletin.getPublishedAndSavedRegions().isEmpty()) {
+					avalancheBulletinRepository.save(loadedBulletin);
+					resultBulletins.put(loadedBulletin.getId(), loadedBulletin);
+				} else {
+					avalancheBulletinRepository.delete(loadedBulletin);
+				}
 			}
+		}
 
-			// Bulletin has to be updated
-			entityManager.merge(updatedBulletin);
-			resultBulletins.put(updatedBulletin.getId(), updatedBulletin);
+		// Bulletin has to be updated
+		avalancheBulletinRepository.save(updatedBulletin);
+		resultBulletins.put(updatedBulletin.getId(), updatedBulletin);
 
-			for (AvalancheBulletin bulletin : resultBulletins.values())
-				initializeBulletin(bulletin);
+		for (AvalancheBulletin bulletin : resultBulletins.values())
+			initializeBulletin(bulletin);
 
-			avalancheReportController.saveReport(resultBulletins, startDate, region, user, entityManager);
-			// save report for super regions
-			for (Region superRegion : region.getSuperRegions()) {
-				avalancheReportController.saveReport(resultBulletins, startDate, superRegion, user, entityManager);
-			}
+		avalancheReportController.saveReport(resultBulletins, startDate, region, user);
+		// save report for super regions
+		for (Region superRegion : region.getSuperRegions()) {
+			avalancheReportController.saveReport(resultBulletins, startDate, superRegion, user);
+		}
 
-			logger.info("Bulletin {} for region {} updated by {}", updatedBulletin.getId(), region.getId(), user);
+		logger.info("Bulletin {} for region {} updated by {}", updatedBulletin.getId(), region.getId(), user);
 
-			return resultBulletins;
+		return resultBulletins;
 	}
 
 	/**
 	 * Deletes a {@code bulletin} from the database.
 	 *
-	 * @param startDate
-	 *            the start date the bulletin is valid from
-	 * @param endDate
-	 *            the end date the bulletin is valid until
-	 * @param region
-	 *            the active region of the user who is deleting the bulletin
+	 * @param startDate the start date the bulletin is valid from
+	 * @param endDate   the end date the bulletin is valid until
+	 * @param region    the active region of the user who is deleting the bulletin
 	 * @return a map of all bulletin ids and bulletins for this day
 	 */
-    public synchronized Map<String, AvalancheBulletin> deleteBulletin(String bulletinId, Instant startDate, Instant endDate,
-			Region region, User user, EntityManager entityManager) {
+	@Transactional
+	public synchronized Map<String, AvalancheBulletin> deleteBulletin(String bulletinId, Instant startDate, Instant endDate,
+																	  Region region, User user) {
 		Map<String, AvalancheBulletin> resultBulletins = new HashMap<String, AvalancheBulletin>();
 
-			List<AvalancheBulletin> loadedBulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-					.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
+		List<AvalancheBulletin> loadedBulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
 
-			for (AvalancheBulletin loadedBulletin : loadedBulletins) {
-				if (!loadedBulletin.getId().equals(bulletinId))
-					resultBulletins.put(loadedBulletin.getId(), loadedBulletin);
-				else
-					entityManager.remove(loadedBulletin);
-			}
+		for (AvalancheBulletin loadedBulletin : loadedBulletins) {
+			if (!loadedBulletin.getId().equals(bulletinId))
+				resultBulletins.put(loadedBulletin.getId(), loadedBulletin);
+			else
+				avalancheBulletinRepository.delete(loadedBulletin);
+		}
 
-			for (AvalancheBulletin bulletin : resultBulletins.values())
-				initializeBulletin(bulletin);
+		for (AvalancheBulletin bulletin : resultBulletins.values())
+			initializeBulletin(bulletin);
 
-			avalancheReportController.saveReport(resultBulletins, startDate, region, user, entityManager);
-			// save report for super regions
-			for (Region superRegion : region.getSuperRegions()) {
-				avalancheReportController.saveReport(resultBulletins, startDate, superRegion, user, entityManager);
-			}
+		avalancheReportController.saveReport(resultBulletins, startDate, region, user);
+		// save report for super regions
+		for (Region superRegion : region.getSuperRegions()) {
+			avalancheReportController.saveReport(resultBulletins, startDate, superRegion, user);
+		}
 
-			return resultBulletins;
+		return resultBulletins;
 	}
 
 	/**
 	 * Returns the highest {@code DangerRating} of all bulletins with status
 	 * {@code published} for a given {@code date} and in a specific {@code regions}.
 	 *
-	 * @param date
-	 *            the date of the time period of interest
-	 * @param regions
-	 *            the regions of interest
+	 * @param date    the date of the time period of interest
+	 * @param regions the regions of interest
 	 * @return the highest {@code DangerRating} for the given time period and in the
-	 *         specific region
-	 * @throws AlbinaException
-	 *             if the published bulletins for this time period and in this
-	 *             region could not be loaded
+	 * specific region
+	 * @throws AlbinaException if the published bulletins for this time period and in this
+	 *                         region could not be loaded
 	 */
 	public DangerRating getHighestDangerRating(Instant date, List<Region> regions) throws AlbinaException {
 		Collection<AvalancheBulletin> result = avalancheReportController.getPublishedBulletins(date,
-				regions);
+			regions);
 
 		if (result != null) {
 			DangerRating dangerRating = DangerRating.missing;
@@ -459,26 +431,22 @@ public class AvalancheBulletinController {
 	 * Returns the most recent bulletins for a given time period and
 	 * {@code regions}.
 	 *
-	 * @param startDate
-	 *            the start date the bulletins should be valid from
-	 * @param endDate
-	 *            the end date the bulletins should be valid until
-	 * @param regions
-	 *            the regions of the bulletins
+	 * @param startDate the start date the bulletins should be valid from
+	 * @param endDate   the end date the bulletins should be valid until
+	 * @param regions   the regions of the bulletins
 	 * @return the most recent bulletins for the given time period and regions
 	 */
-	public List<AvalancheBulletin> getBulletins(Instant startDate, Instant endDate, List<Region> regions, EntityManager entityManager) {
-			List<AvalancheBulletin> bulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-				.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
-			List<AvalancheBulletin> results = bulletins.stream()
-				.filter(bulletin -> regions.stream()
-					.anyMatch(bulletin::affectsRegionWithoutSuggestions))
-				.collect(Collectors.toList());
+	public List<AvalancheBulletin> getBulletins(Instant startDate, Instant endDate, List<Region> regions) {
+		List<AvalancheBulletin> bulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
+		List<AvalancheBulletin> results = bulletins.stream()
+			.filter(bulletin -> regions.stream()
+				.anyMatch(bulletin::affectsRegionWithoutSuggestions))
+			.collect(Collectors.toList());
 
-			for (AvalancheBulletin bulletin : results)
-				initializeBulletin(bulletin);
+		for (AvalancheBulletin bulletin : results)
+			initializeBulletin(bulletin);
 
-			return results;
+		return results;
 	}
 
 	/**
@@ -486,53 +454,47 @@ public class AvalancheBulletinController {
 	 * suggested regions, because they are not valid anymore after the bulletin has
 	 * been submitted.
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param region
-	 *            the region that should be submitted
-	 * @param user
-	 *            the user who submits the bulletins
+	 * @param startDate the start date of the time period
+	 * @param endDate   the end date of the time period
+	 * @param region    the region that should be submitted
+	 * @param user      the user who submits the bulletins
 	 * @return a list of all bulletins
 	 */
+	@Transactional
 	public List<AvalancheBulletin> submitBulletins(Instant startDate, Instant endDate, Region region, User user) {
-		return HibernateUtil.getInstance().runTransaction(entityManager -> {
-			List<AvalancheBulletin> bulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-					.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
+		List<AvalancheBulletin> bulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
 
-			List<AvalancheBulletin> results = bulletins.stream()
-				.filter(bulletin -> bulletin.affectsRegion(region))
-				.collect(Collectors.toList());
+		List<AvalancheBulletin> results = bulletins.stream()
+			.filter(bulletin -> bulletin.affectsRegion(region))
+			.collect(Collectors.toList());
 
-			// select bulletins within the region
+		// select bulletins within the region
 
-			Set<String> result = new HashSet<String>();
-			for (AvalancheBulletin bulletin : results) {
+		Set<String> result = new HashSet<String>();
+		for (AvalancheBulletin bulletin : results) {
 
-				// set author
-				if (!bulletin.getAdditionalAuthors().contains(user.getName()))
-					bulletin.addAdditionalAuthor(user.getName());
-				bulletin.setUser(user);
+			// set author
+			if (!bulletin.getAdditionalAuthors().contains(user.getName()))
+				bulletin.addAdditionalAuthor(user.getName());
+			bulletin.setUser(user);
 
-				// delete suggestions within the region
-				result = new HashSet<String>();
-				for (String entry : bulletin.getSuggestedRegions())
-					if (entry.startsWith(region.getId()))
-						result.add(entry);
-				for (String entry : result)
-					bulletin.getSuggestedRegions().remove(entry);
+			// delete suggestions within the region
+			result = new HashSet<String>();
+			for (String entry : bulletin.getSuggestedRegions())
+				if (entry.startsWith(region.getId()))
+					result.add(entry);
+			for (String entry : result)
+				bulletin.getSuggestedRegions().remove(entry);
 
-				entityManager.merge(bulletin);
-			}
+			avalancheBulletinRepository.save(bulletin);
+		}
 
-			for (AvalancheBulletin avalancheBulletin : bulletins)
-				initializeBulletin(avalancheBulletin);
+		for (AvalancheBulletin avalancheBulletin : bulletins)
+			initializeBulletin(avalancheBulletin);
 
-			logger.info("Bulletins for region {} submitted", region.getId());
+		logger.info("Bulletins for region {} submitted", region.getId());
 
-			return bulletins;
-		});
+		return bulletins;
 	}
 
 	/**
@@ -540,68 +502,53 @@ public class AvalancheBulletinController {
 	 * Sets the author of the bulletins and moves all saved regions to published
 	 * regions.
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param region
-	 *            the region that should be published
-	 * @param publicationDate
-	 *            the timestamp of the publication
-	 * @param username
-	 *            the user who publishes the bulletins
+	 * @param startDate       the start date of the time period
+	 * @param endDate         the end date of the time period
+	 * @param region          the region that should be published
+	 * @param publicationDate the timestamp of the publication
+	 * @param username        the user who publishes the bulletins
 	 */
+	@Transactional
 	public void publishBulletins(Instant startDate, Instant endDate, Region region,
 								 Instant publicationDate, String username) {
 
 		User user = username != null ? userRepository.findById(username).orElseThrow() : null;
-		HibernateUtil.getInstance().runTransaction(entityManager -> {
-			List<AvalancheBulletin> bulletins = getAllBulletins(startDate, endDate, entityManager);
+		List<AvalancheBulletin> bulletins = getAllBulletins(startDate, endDate);
 
-			for (AvalancheBulletin bulletin : bulletins) {
+		for (AvalancheBulletin bulletin : bulletins) {
 
-				// select bulletins within the region
-				if (bulletin.affectsRegionWithoutSuggestions(region)) {
+			// select bulletins within the region
+			if (bulletin.affectsRegionWithoutSuggestions(region)) {
 
-					// set author
-					ServerInstance serverInstance = serverInstanceRepository.getLocalServerInstance();
-					if (user != null && !Objects.equals(user.getEmail(), serverInstance.getUserName())) {
-						if (!bulletin.getAdditionalAuthors().contains(user.getName()))
-							bulletin.addAdditionalAuthor(user.getName());
-						bulletin.setUser(user);
-					}
-
-					// publish all saved regions
-					Set<String> result = bulletin.getSavedRegions().stream()
-						.filter(entry -> entry.startsWith(region.getId()))
-						.collect(Collectors.toSet());
-					for (String entry : result) {
-						bulletin.getSavedRegions().remove(entry);
-						bulletin.getPublishedRegions().add(entry);
-					}
-
-					bulletin.setPublicationDate(publicationDate.atZone(ZoneId.of("UTC")));
-					entityManager.merge(bulletin);
+				// set author
+				ServerInstance serverInstance = serverInstanceRepository.getLocalServerInstance();
+				if (user != null && !Objects.equals(user.getEmail(), serverInstance.getUserName())) {
+					if (!bulletin.getAdditionalAuthors().contains(user.getName()))
+						bulletin.addAdditionalAuthor(user.getName());
+					bulletin.setUser(user);
 				}
 
-				// set publication date for all bulletins
+				// publish all saved regions
+				Set<String> result = bulletin.getSavedRegions().stream()
+					.filter(entry -> entry.startsWith(region.getId()))
+					.collect(Collectors.toSet());
+				for (String entry : result) {
+					bulletin.getSavedRegions().remove(entry);
+					bulletin.getPublishedRegions().add(entry);
+				}
+
 				bulletin.setPublicationDate(publicationDate.atZone(ZoneId.of("UTC")));
-				entityManager.merge(bulletin);
+				avalancheBulletinRepository.save(bulletin);
 			}
-			return null;
-		});
+
+			// set publication date for all bulletins
+			bulletin.setPublicationDate(publicationDate.atZone(ZoneId.of("UTC")));
+			avalancheBulletinRepository.save(bulletin);
+		}
 	}
 
 	public List<AvalancheBulletin> getAllBulletins(Instant startDate, Instant endDate) {
-		return HibernateUtil.getInstance().run(entityManager -> getAllBulletins(startDate, endDate, entityManager));
-	}
-
-	private List<AvalancheBulletin> getAllBulletins(Instant startDate, Instant endDate, EntityManager entityManager) {
-		final List<AvalancheBulletin> bulletins = entityManager
-			.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-			.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate))
-			.setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate))
-			.getResultList();
+		final List<AvalancheBulletin> bulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
 		for (AvalancheBulletin avalancheBulletin : bulletins) {
 			initializeBulletin(avalancheBulletin);
 		}
@@ -612,10 +559,8 @@ public class AvalancheBulletinController {
 	 * Check if a micro region of the specified {@code region} was defined twice in
 	 * the given {@code bulletins}.
 	 *
-	 * @param bulletins
-	 *            the bulletins to be checked
-	 * @param region
-	 *            the region to check the micro regions for
+	 * @param bulletins the bulletins to be checked
+	 * @param region    the region to check the micro regions for
 	 * @return true if one micro region was defined twice
 	 */
 	private boolean checkBulletinsForDuplicateRegion(List<AvalancheBulletin> bulletins, Region region) {
@@ -638,12 +583,10 @@ public class AvalancheBulletinController {
 	 * Return all micro regions that are contained by {@code regions} and part of
 	 * {@code region}.
 	 *
-	 * @param regions
-	 *            the micro regions to be checked
-	 * @param region
-	 *            the region of interest
+	 * @param regions the micro regions to be checked
+	 * @param region  the region of interest
 	 * @return a set of micro regions that are contained by {@code regions} and part
-	 *         of {@code region}
+	 * of {@code region}
 	 */
 	private Set<String> getOwnRegions(Set<String> regions, Region region) {
 		return regions.stream()
@@ -656,105 +599,97 @@ public class AvalancheBulletinController {
 	 * missing and duplicate micro regions, missing text parts, pending suggestions,
 	 * missing danger ratings and incomplete translations.
 	 *
-	 * @param startDate
-	 *            the start date of the time period
-	 * @param endDate
-	 *            the end date of the time period
-	 * @param region
-	 *            the region of interest
+	 * @param startDate the start date of the time period
+	 * @param endDate   the end date of the time period
+	 * @param region    the region of interest
 	 * @return a set containing all warnings (empty if no warning was found)
 	 */
 	public Set<String> checkBulletins(Instant startDate, Instant endDate, Region region) {
-		return HibernateUtil.getInstance().runTransaction(entityManager -> {
-			Set<String> json = new LinkedHashSet<>();
-			boolean missingAvActivityHighlights = false;
-			boolean missingAvActivityComment = false;
-			boolean missingSnowpackStructureHighlights = false;
-			boolean missingSnowpackStructureComment = false;
-			boolean pendingSuggestions = false;
-			boolean missingDangerRating = false;
+		Set<String> json = new LinkedHashSet<>();
+		boolean missingAvActivityHighlights = false;
+		boolean missingAvActivityComment = false;
+		boolean missingSnowpackStructureHighlights = false;
+		boolean missingSnowpackStructureComment = false;
+		boolean pendingSuggestions = false;
+		boolean missingDangerRating = false;
 
-			List<AvalancheBulletin> bulletins = entityManager.createQuery(HibernateUtil.queryGetBulletins, AvalancheBulletin.class)
-					.setParameter("startDate", AlbinaUtil.getZonedDateTimeUtc(startDate)).setParameter("endDate", AlbinaUtil.getZonedDateTimeUtc(endDate)).getResultList();
+		List<AvalancheBulletin> bulletins = avalancheBulletinRepository.findByValidFromOrValidUntil(startDate, endDate);
 
-			List<AvalancheBulletin> results = bulletins.stream()
-				.filter(bulletin -> bulletin.affectsRegion(region))
-				.collect(Collectors.toList());
-			// select bulletins within the region
+		List<AvalancheBulletin> results = bulletins.stream()
+			.filter(bulletin -> bulletin.affectsRegion(region))
+			.toList();
+		// select bulletins within the region
 
-			if (checkBulletinsForDuplicateRegion(bulletins, region))
-				json.add("duplicateRegion");
+		if (checkBulletinsForDuplicateRegion(bulletins, region))
+			json.add("duplicateRegion");
 
-			Set<String> definedRegions = new HashSet<String>();
-			for (AvalancheBulletin bulletin : results) {
-				definedRegions.addAll(getOwnRegions(bulletin.getSavedRegions(), region));
-				definedRegions.addAll(getOwnRegions(bulletin.getPublishedRegions(), region));
+		Set<String> definedRegions = new HashSet<String>();
+		for (AvalancheBulletin bulletin : results) {
+			definedRegions.addAll(getOwnRegions(bulletin.getSavedRegions(), region));
+			definedRegions.addAll(getOwnRegions(bulletin.getPublishedRegions(), region));
 
-				if (!pendingSuggestions)
-					for (String entry : bulletin.getSuggestedRegions())
-						if (entry.startsWith(region.getId()))
-							pendingSuggestions = true;
+			if (!pendingSuggestions)
+				for (String entry : bulletin.getSuggestedRegions())
+					if (entry.startsWith(region.getId()))
+						pendingSuggestions = true;
 
-				if (bulletin.affectsRegionWithoutSuggestions(region)) {
-					if (missingAvActivityHighlights || bulletin.getAvActivityHighlightsTextcat() == null
-							|| bulletin.getAvActivityHighlightsTextcat().isEmpty())
-						missingAvActivityHighlights = true;
-					if (missingAvActivityComment || bulletin.getAvActivityCommentTextcat() == null
-							|| bulletin.getAvActivityCommentTextcat().isEmpty())
-						missingAvActivityComment = true;
-					if (missingSnowpackStructureComment || bulletin.getSnowpackStructureCommentTextcat() == null
-							|| bulletin.getSnowpackStructureCommentTextcat().isEmpty())
-						missingSnowpackStructureComment = true;
+			if (bulletin.affectsRegionWithoutSuggestions(region)) {
+				if (missingAvActivityHighlights || bulletin.getAvActivityHighlightsTextcat() == null
+					|| bulletin.getAvActivityHighlightsTextcat().isEmpty())
+					missingAvActivityHighlights = true;
+				if (missingAvActivityComment || bulletin.getAvActivityCommentTextcat() == null
+					|| bulletin.getAvActivityCommentTextcat().isEmpty())
+					missingAvActivityComment = true;
+				if (missingSnowpackStructureComment || bulletin.getSnowpackStructureCommentTextcat() == null
+					|| bulletin.getSnowpackStructureCommentTextcat().isEmpty())
+					missingSnowpackStructureComment = true;
 
-					if (bulletin.getForenoon() == null
-							|| bulletin.getForenoon().dangerRating(true) == DangerRating.missing
-							|| (bulletin.getForenoon() != null && bulletin.getForenoon().isHasElevationDependency()
-									&& bulletin.getForenoon().dangerRating(false) == DangerRating.missing)) {
-						missingDangerRating = true;
-					}
+				if (bulletin.getForenoon() == null
+					|| bulletin.getForenoon().dangerRating(true) == DangerRating.missing
+					|| (bulletin.getForenoon() != null && bulletin.getForenoon().isHasElevationDependency()
+					&& bulletin.getForenoon().dangerRating(false) == DangerRating.missing)) {
+					missingDangerRating = true;
+				}
 
-					if (missingDangerRating || (bulletin.isHasDaytimeDependency() && bulletin.getAfternoon() == null)
-							|| (bulletin.isHasDaytimeDependency()
-									&& bulletin.getAfternoon().dangerRating(true) == DangerRating.missing)
-							|| (bulletin.isHasDaytimeDependency() && bulletin.getAfternoon() != null
-									&& bulletin.getAfternoon().isHasElevationDependency()
-									&& bulletin.getAfternoon().dangerRating(false) == DangerRating.missing)) {
-						missingDangerRating = true;
-					}
+				if (missingDangerRating || (bulletin.isHasDaytimeDependency() && bulletin.getAfternoon() == null)
+					|| (bulletin.isHasDaytimeDependency()
+					&& bulletin.getAfternoon().dangerRating(true) == DangerRating.missing)
+					|| (bulletin.isHasDaytimeDependency() && bulletin.getAfternoon() != null
+					&& bulletin.getAfternoon().isHasElevationDependency()
+					&& bulletin.getAfternoon().dangerRating(false) == DangerRating.missing)) {
+					missingDangerRating = true;
 				}
 			}
+		}
 
-			if (definedRegions.size() < region.getMicroRegions())
-				json.add("missingRegion");
-			if (missingAvActivityHighlights)
-				json.add("missingAvActivityHighlights");
-			if (missingAvActivityComment)
-				json.add("missingAvActivityComment");
-			if (missingSnowpackStructureHighlights)
-				json.add("missingSnowpackStructureHighlights");
-			if (missingSnowpackStructureComment)
-				json.add("missingSnowpackStructureComment");
-			if (pendingSuggestions)
-				json.add("pendingSuggestions");
-			if (missingDangerRating)
-				json.add("missingDangerRating");
+		if (definedRegions.size() < region.getMicroRegions())
+			json.add("missingRegion");
+		if (missingAvActivityHighlights)
+			json.add("missingAvActivityHighlights");
+		if (missingAvActivityComment)
+			json.add("missingAvActivityComment");
+		if (missingSnowpackStructureHighlights)
+			json.add("missingSnowpackStructureHighlights");
+		if (missingSnowpackStructureComment)
+			json.add("missingSnowpackStructureComment");
+		if (pendingSuggestions)
+			json.add("pendingSuggestions");
+		if (missingDangerRating)
+			json.add("missingDangerRating");
 
-			return json;
-		});
+		return json;
 	}
 
 	/**
 	 * Lock a specific bulletin due to current modification.
 	 *
-	 * @param lock
-	 *            the bulletin lock
-	 * @throws AlbinaException
-	 *             if the bulletin was already locked
+	 * @param lock the bulletin lock
+	 * @throws AlbinaException if the bulletin was already locked
 	 */
 	public void lockBulletin(BulletinLock lock) throws AlbinaException {
 		for (BulletinLock bulletinLock : bulletinLocks) {
 			if (bulletinLock.getDate().equals(lock.getDate())
-					&& bulletinLock.getBulletin().equals(lock.getBulletin()))
+				&& bulletinLock.getBulletin().equals(lock.getBulletin()))
 				throw new AlbinaException("Bulletin already locked!");
 		}
 		bulletinLocks.add(lock);
@@ -763,10 +698,8 @@ public class AvalancheBulletinController {
 	/**
 	 * Unlock a specific bulletin.
 	 *
-	 * @param lock
-	 *            the bulletin lock
-	 * @throws AlbinaException
-	 *             if the bulletin was not locked
+	 * @param lock the bulletin lock
+	 * @throws AlbinaException if the bulletin was not locked
 	 */
 	public void unlockBulletin(BulletinLock lock) throws AlbinaException {
 		BulletinLock hit = bulletinLocks.stream()
@@ -783,8 +716,7 @@ public class AvalancheBulletinController {
 	/**
 	 * Unlock all bulletins locked by a specific {@code sessionId}.
 	 *
-	 * @param sessionId
-	 *            the session id
+	 * @param sessionId the session id
 	 */
 	public void unlockBulletins(String sessionId) {
 		List<BulletinLock> hits = bulletinLocks.stream()
@@ -800,8 +732,7 @@ public class AvalancheBulletinController {
 	/**
 	 * Return all bulletin locks that are locked for {@code region}.
 	 *
-	 * @param date
-	 *            the date of interest
+	 * @param date the date of interest
 	 * @return all bulletin locks that are locked for {@code date}
 	 */
 	public List<BulletinLock> getLockedBulletins(Instant date) {
